Remove workspace code
